--- a/themes/landing-page-hugo/layouts/partials/about.html
+++ b/themes/landing-page-hugo/layouts/partials/about.html
@@ -1,5 +1,5 @@
 <section id="about" class="container content-section text-center">
-{{ range where .Data.Pages "Section" "about" | first 1 }}
+{{ range first 1 (where site.RegularPages "Section" "about")}}
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2">
 			<br/><br/><h2>{{ .Title }}</h2><br/>{{ .Content }}<br/>
